# example-project

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE
app-a/cmd/app/: BUILD.bazel  main.go  main_test.go
app-b/cmd/app/: BUILD.bazel  main.go
app-c/cmd/app/: BUILD.bazel  main.go
lib-common/pkg/common/: BUILD.bazel  common.go  common_test.go
lib-d/pkg/d/: BUILD.bazel  d.go  d_test.go
lib-e/pkg/e/: BUILD.bazel  e.go  e_test.go
lib-f/pkg/f/: BUILD.bazel  f.go  f_test.go
lib-g/pkg/g/: BUILD.bazel  g.go  g_test.go
