load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/zoidbergwill/example-project/app-a/cmd/app",
    visibility = ["//visibility:private"],
    deps = [
        "//lib-common/pkg/common:go_default_library",
        "//lib-d/pkg/d:go_default_library",
        "//lib-e/pkg/e:go_default_library",
        "//lib-f/pkg/f:go_default_library",
    ],
)

go_binary(
    name = "app",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
)
