load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "a_library",
    srcs = ["main.go"],
    importpath = "github.com/zoidbergwill/example-project/app-a/cmd/app",
    visibility = ["//visibility:private"],
    deps = [
        "//lib-common/pkg/common:common_library",
        "//lib-d/pkg/d:d_library",
        "//lib-e/pkg/e:e_library",
        "//lib-f/pkg/f:f_library",
    ],
)

go_binary(
    name = "app",
    embed = [":a_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "a_test",
    srcs = ["main_test.go"],
    embed = [":a_library"],
)
