load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "b_library",
    srcs = ["main.go"],
    importpath = "github.com/zoidbergwill/example-project/app-b/cmd/app",
    visibility = ["//visibility:private"],
    deps = ["//lib-common/pkg/common:common_library"],
)

go_binary(
    name = "app",
    embed = [":b_library"],
    visibility = ["//visibility:public"],
)
