load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/zoidbergwill/example-project/app-c/cmd/app",
    visibility = ["//visibility:private"],
    deps = ["//lib-common/pkg/common:go_default_library"],
)

go_binary(
    name = "app",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
