load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "common_library",
    srcs = ["common.go"],
    importpath = "github.com/zoidbergwill/example-project/lib-common/pkg/common",
    visibility = ["//visibility:public"],
)

go_test(
    name = "common_test",
    srcs = ["common_test.go"],
    embed = [":common_library"],
)
