load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "d_library",
    srcs = ["d.go"],
    importpath = "github.com/zoidbergwill/example-project/lib-d/pkg/d",
    visibility = ["//visibility:public"],
)

go_test(
    name = "d_test",
    srcs = ["d_test.go"],
    embed = [":d_library"],
)
