load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["e.go"],
    importpath = "github.com/zoidbergwill/example-project/lib-e/pkg/e",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["e_test.go"],
    embed = [":go_default_library"],
)
