load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "e_library",
    srcs = ["e.go"],
    importpath = "github.com/zoidbergwill/example-project/lib-e/pkg/e",
    visibility = ["//visibility:public"],
)

go_test(
    name = "e_test",
    srcs = ["e_test.go"],
    embed = [":e_library"],
)
