load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "f_library",
    srcs = ["f.go"],
    importpath = "github.com/zoidbergwill/example-project/lib-f/pkg/f",
    visibility = ["//visibility:public"],
)

go_test(
    name = "f_test",
    srcs = ["f_test.go"],
    embed = [":f_library"],
)
