load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["g.go"],
    importpath = "github.com/zoidbergwill/example-project/lib-g/pkg/g",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["g_test.go"],
    embed = [":go_default_library"],
)
